Changelog

0.21
 Addded finnish translation (thanks to C.Hellberg)

0.20
 Added french translation (thanks to k|torz)
 Fixed ie javascript error for ie (probably)

0.19
 Added CSS field to options page
 Minor translation fixes
 Now default css is 'top-line'
 Changed description (tnanks to Arun Yerram)
 Changelog plugin URL


0.18
 Added translations (russian & belarusian)
 Added options for custom message
 Changed description
 Fixed css
 Some minor fixes


0.17
 Fixed missing cookies checking
 Added Changelog file